force-app/main/default/objects/AM_Municipio__c/AM_Municipio__c.object-meta.xml
<CustomObject>
    <description>Req. ID AM-006. Objeto que contiene los municipios con código y departamento.</description>
    <label>Municipio</label>
    <nameField>
        <label>Nombre de Municipio</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Municipios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>