force-app/main/default/objects/AM_Municipio__c/fields/AM_Codigo_DANE_departamento__c.field-meta.xml
<CustomField>
    <fullName>AM_Codigo_DANE_departamento__c</fullName>
    <description>Req. ID AM-006. Código departamento asociado al municipio.</description>
    <label>Código DANE departamento</label>
    <length>10</length>
    <type>Text</type>
</CustomField>