force-app/main/default/objects/AM_Municipio__c/fields/AM_Codigo_DANE_municipio__c.field-meta.xml
<CustomField>
    <fullName>AM_Codigo_DANE_municipio__c</fullName>
    <description>Req. ID AM-006. Código del municipio</description>
    <label>Código DANE municipio</label>
    <length>10</length>
    <type>Text</type>
</CustomField>