force-app/main/default/objects/AM_Municipio__c/fields/AM_Codigo_SIPRES_departamento__c.field-meta.xml
<CustomField>
    <fullName>AM_Codigo_SIPRES_departamento__c</fullName>
    <label>Código SIPRES departamento</label>
    <length>20</length>
    <type>Text</type>
</CustomField>