force-app/main/default/objects/AM_Municipio__c/fields/AM_Nombre_departamento__c.field-meta.xml
<CustomField>
    <fullName>AM_Nombre_departamento__c</fullName>
    <description>Req. ID AM-006. Nombre departamento asociado al municipio.</description>
    <label>Nombre departamento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>