force-app/main/default/objects/AM_Municipio__c/fields/ID_PAIS_SAP__c.field-meta.xml
<CustomField>
    <fullName>ID_PAIS_SAP__c</fullName>
    <description>Campo creado para guardar el id de Unoee para determinar el codigo de ciudad de SAP</description>
    <label>ID PAIS SAP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>