force-app/main/default/objects/AM_Municipio__c/fields/ID_POBLACION_SAP__c.field-meta.xml
<CustomField>
    <fullName>ID_POBLACION_SAP__c</fullName>
    <description>ID Poblacion SAP es el campo creado para la integracion donde esta el codigo de poblacion de SAP</description>
    <label>ID POBLACION SAP</label>
    <length>5</length>
    <type>Text</type>
</CustomField>