force-app/main/default/objects/AM_Municipio__c/fields/ID_REGION_SAP__c.field-meta.xml
<CustomField>
    <fullName>ID_REGION_SAP__c</fullName>
    <description>ID Region SAP, es un campo donde estara el codigo de region de SAP para las integraciones</description>
    <label>ID REGION SAP</label>
    <length>2</length>
    <type>Text</type>
</CustomField>