force-app/main/default/objects/AM_Municipio__c/fields/ID_SALESFORCE__c.field-meta.xml
<CustomField>
    <fullName>ID_SALESFORCE__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID SALESFORCE</label>
    <type>Text</type>
</CustomField>