force-app/main/default/objects/AM_Municipio__c/fields/ID_UNOEE__c.field-meta.xml
<CustomField>
    <fullName>ID_UNOEE__c</fullName>
    <description>Campo creado para guardar el id de Unoee para determinar el codigo de ciudad de Unoee</description>
    <inlineHelpText>Campo creado para guardar el id de Unoee para determinar el codigo de ciudad de Unoee</inlineHelpText>
    <label>ID UNOEE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>