force-app/main/default/objects/AM_Municipio__c/listViews/AM_Todos_los_municipios.listView-meta.xml
<ListView>
    <fullName>AM_Todos_los_municipios</fullName>
    <columns>AM_Codigo_DANE_municipio__c</columns>
    <columns>NAME</columns>
    <columns>AM_Codigo_DANE_departamento__c</columns>
    <columns>AM_Nombre_departamento__c</columns>
    <columns>AM_Codigo_SIPRES_departamento__c</columns>
    <columns>AM_Codigo_SIPRES_municipio__c</columns>
    <columns>ID_PAIS_SAP__c</columns>
    <columns>ID_POBLACION_SAP__c</columns>
    <columns>ID_REGION_SAP__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los municipios</label>
</ListView>